@@ -1,3 +1,9 @@
+2012-03-24  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
+
+	* src/drivers/serial.c (PDC_check_key): Refactored to fix new compiler
+	warnings (dereferencing type-punned pointer will break strict-aliasing
+	rules).
+
 2009-03-26  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
 
 	* cdl/pdcurses.cdl:
